--- a/Topología_I/main.tex
+++ b/Topología_I/main.tex
@@ -10,7 +10,7 @@
         autor=Jesús Muñoz Velasco,
         año=Curso 2024-2025]
         
-    \pagestyle{empty}
+    \thispagestyle{empty}
     \tableofcontents
 
     \input{Tema_1.tex}
