--- a/Topología_I/Tema_1.tex
+++ b/Topología_I/Tema_1.tex
@@ -16,7 +16,7 @@ A la familia $\cc{T}$ se le llama \textbf{topología} en el conjunto $X$. A los 
 
 \begin{observacion}
     De \hyperlink{A1}{\textbf{(A1)}} podemos concretar que si $U_1, \dots, U_k \in \cc{T}$, entonces \smash{$\bigcap\limits_{i=1}^{\infty}U_i \in \cc{T}$}.
-    En general, si $\{U_i\}_{i=1}^{\infty}\in \cc{T}$, entonces $\bigcap\limits_{i=1}^{\infty}$ no tiene por qué ser abierto.
+    En general, si $\{U_i\}_{i=1}^{\infty}\in \cc{T}$, entonces $\bigcup\limits_{i=1}^{\infty}$ no tiene por qué ser abierto.
 \end{observacion}
 
 \begin{ejemplo}\ 
