--- a/_assets/preambulo.tex
+++ b/_assets/preambulo.tex
@@ -285,3 +285,5 @@
 
 \renewcommand{\chaptermark}[1]{ % Quitar el número de chapter en el encabezado
   \markboth{#1}{}}
+
+  \usetikzlibrary{arrows.meta}  % Cargar la librería para personalizar flechas
