--- a/Topología_I/Tema_1.tex
+++ b/Topología_I/Tema_1.tex
@@ -1,6 +1,6 @@
 % 18-09-2024
 
-\chapter{Tema 1: Espacios Topológicos}
+\chapter{Espacios Topológicos}
 
 \begin{definicion}
     Un \textbf{espacio topológico} es una par $(X, \cc{T})$, donde $X \neq \emptyset$ es un conjunto y $\cc{T}\subset\cc{P}(X)$ es una familia de subconjuntos de $X$.
@@ -56,7 +56,7 @@
 
     \vspace*{0.5cm}
 
-    \section*{Topología métrica. La topología usual de $\bb{R}^n$}
+    \section{Topología métrica. La topología usual de $\bb{R}^n$}
 
     \begin{definicion}
         Un \textbf{espacio métrico} es un par $(X, d)$ donde $X \neq \emptyset$ es un conjunto y $d: X \times X \rightarrow \bb{R}$ es una aplicación que verifica:
