--- a/Topología_I/main.tex
+++ b/Topología_I/main.tex
@@ -12,6 +12,8 @@
         
     \thispagestyle{empty}
     \tableofcontents
+    \newpage
+    \thispagestyle{empty}
 
     \input{Tema_1.tex}
 \end{document}
