--- a/_assets/portada.tex
+++ b/_assets/portada.tex
@@ -11,6 +11,7 @@
 \define@key{portada}{subtitulo}{\def\subtitulo{#1}}
 \define@key{portada}{autor}{\def\autor{#1}}
 \define@key{portada}{año}{\def\año{#1}}
+\define@key{portada}{color página}{\def\colorpagina{#1}}
 
 \newcommand*{\portada}[1][]{%
   % Encabezado
@@ -22,9 +23,11 @@
     titulo=Sin Título,%
     subtitulo=Sin Subtítulo,%
     autor=Autor Desconocido,%
-    año=Sin Año, #1}%
+    año=Sin Año,%
+    color página=white, #1}%
     \begin{titlepage}
         \centering
+        \pagecolor{\colorpagina} % Cambia el color de fondo de la portada
         {\includegraphics[width=0.2\textwidth]{Logo-UGR-Black.png}\par}
         \vspace{1cm}
         {\bfseries\LARGE Universidad de Granada \par}
@@ -40,4 +43,5 @@
         \vfill
         {\Large \año \par}
     \end{titlepage}%
+    \pagecolor{white}
 }
