--- a/_assets/preambulo.tex
+++ b/_assets/preambulo.tex
@@ -269,21 +269,6 @@
 }
 
 %------------------------------------------------------------------------
-\setlength{\parindent}{0pt}
+\setlength{\parindent}{0pt} % quitar la sangría
 
 \setlist[itemize, 1]{label=\textbullet \textbf{)}}  % Cambiar las viñetas a círculos
-
-\usepackage{titlesec} % Para quitar el número de los chapters
-
-\titleformat{\chapter}[display]% Quitar el número de chapter en el título
-  {\Huge\bfseries}
-  {}
-  {0pt}
-  {}
-
-\titlespacing*{\chapter}{0pt}{-10pt}{60pt}
-
-\renewcommand{\chaptermark}[1]{ % Quitar el número de chapter en el encabezado
-  \markboth{#1}{}}
-
-  \usetikzlibrary{arrows.meta}  % Cargar la librería para personalizar flechas
