--- a/Topología_I/main.tex
+++ b/Topología_I/main.tex
@@ -16,4 +16,7 @@
     \thispagestyle{empty}
 
     \input{Tema_1.tex}
+    % \newpage
+    % \chapter{Relaciones de Problemas}
+    % \input{Relación 1.tex}
 \end{document}
