--- a/_assets/preambulo.tex
+++ b/_assets/preambulo.tex
@@ -74,6 +74,7 @@
 }
 \makeatother
 
+\theoremstyle{definition}
 \newtheorem{coro}{Corolario}[teo]           % Se resetea en cada teorema
 \newtheorem{prop}[teo]{Proposición}         % Usa el mismo contador que teorema
 \newtheorem{lema}[teo]{Lema}                % Usa el mismo contador que teorema
@@ -107,7 +108,7 @@
 }
 
 
-% \renewcommand\qedsymbol{$\blacksquare$}         % Cambiar símbolo QED
+\renewcommand\qedsymbol{\small{$\blacksquare$}}         % Cambiar símbolo QED
 %------------------------------------------------------------------------
 
 % Paquetes para encabezados
